--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Geometry</h1>
       <p>This section includes geometry help, tools and related topics</p>
+	  <h4><a href="geometry.html#TriangleMapping">Triangle Mapping</a></h4>
     </div>
-    <div class="w3-third w3-container">
+    <!--<div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
       <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-    </div>
+    </div>-->
   </div>
 
    <footer id="myFooter">
